--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.19.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
     "prisma": "^5.19.0",
     "ts-node": "^10.9.2",
