--- a/backend/package.json
+++ b/backend/package.json
@@ -19,12 +19,15 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
-    "prisma": "^5.19.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "prisma": "^5.19.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^22.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
